--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </style>
 </head>
 <body>
-  <h1>Revealing 1 pixel for every<br>new follower</h1>
+  <h1>Revealing 1 pixel for every<br>new subscriber</h1>
   <canvas id="canvas" width="316" height="316"></canvas>
   <button onclick="handleRevealClick()">Reveal</button>
 
